testdata/fixtures/audit/negative/hardcoded_secret_neg_unrelated_literal_py.py
# unrelated, non-secret literal assigned to a non-secret-suggesting name
APP_NAME = "vibecoder-app"


def greeting():
    return f"Welcome to {APP_NAME}"
